--- a/client/src/styling/globals.css
+++ b/client/src/styling/globals.css
@@ -2,7 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-
+body {
+  background-image: url('/images/background-luffy.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  min-height: 100vh; /* Ensure it covers the full viewport height */
+}
 
 @layer utilities {
   .text-balance {
